--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: W9CO
 email: w9co@w9co.net
 description: >- # this means to ignore newlines until "baseurl:"
-    A place for me to keep track of random amateur radio information, code, etc.
+    Misc amateur radio information, code, etc.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cubiclegnome
